whoami.pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: whoami
  namespace: whoami
  labels:
    name: whoami
spec:
  containers:
  - name: whoami
    image: containous/whoami
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    # ports:
    #   - containerPort: <Port>
