whoami.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: whoami
  name: whoami-ingress
  #  annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: whoami.kube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami-svc
                port:
                  number: 80
